--- a/Project.toml
+++ b/Project.toml
@@ -3,11 +3,24 @@ uuid = "dbaec3db-ccdb-4776-a965-eee24babd239"
 authors = ["willtebbutt <wt0881@my.bristol.ac.uk>"]
 version = "0.1.0"
 
+[deps]
+Bijectors = "76274a88-744f-5084-9051-94815aaf08c4"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Stheno = "8188c328-b5d6-583d-959b-9690869a5511"
+
+
 [compat]
+Bijectors = "0.5"
+Distributions = "0.21"
+Stheno = "0.6.1"
+Zygote = "0.4.9"
 julia = "1"
 
 [extras]
+BayesianLinearRegressors = "f579363c-4606-5e5c-a623-c4549f609c4b"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [targets]
-test = ["Test"]
+test = ["BayesianLinearRegressors", "Test"]
