--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ Stheno = "8188c328-b5d6-583d-959b-9690869a5511"
 
 [compat]
 Bijectors = "0.5"
-Distributions = "0.21"
+Distributions = "0.17, 0.18, 0.19, 0.20, 0.21, 0.22"
 Stheno = "0.6.1"
 Zygote = "0.4.9"
 julia = "1"
