--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Stheno = "8188c328-b5d6-583d-959b-9690869a5511"
 
 [compat]
-Bijectors = "0.5"
+Bijectors = "0.4, 0.5"
 Distributions = "0.17, 0.18, 0.19, 0.20, 0.21, 0.22"
 Stheno = "0.6.1"
 Zygote = "0.4.9"
